added clock overlay

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,22 @@ IDOTMATRIX_ADDRESS=auto
 
 # Poll interval (seconds)
 POLL_INTERVAL=5
+
+# Overlay clock on album art (now_playing.py)
+# Set to true to draw a small clock on top of the album art before uploading.
+SHOW_CLOCK=false
+
+# Optional clock tuning (only used when SHOW_CLOCK=true)
+# CLOCK_FORMAT defaults to 12-hour time. Example alternative: %H:%M
+CLOCK_FORMAT=%I:%M
+CLOCK_STRIP_LEADING_ZERO=true
+CLOCK_POSITION=bottom-right
+CLOCK_RENDER=tiny
+
+# RGB colors as comma-separated values
+CLOCK_FG=255,255,255
+CLOCK_BG=0,0,0
+
+# Padding around the text and margin from the edge (pixels)
+CLOCK_PADDING=1
+CLOCK_MARGIN=1
