uses in built clock when no music playing

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,23 @@ CLOCK_BG=0,0,0
 # Padding around the text and margin from the edge (pixels)
 CLOCK_PADDING=1
 CLOCK_MARGIN=1
+
+# Built-in device clock when idle (now_playing.py)
+# Switch the iDotMatrix into its built-in clock mode when no music is playing.
+USE_DEVICE_CLOCK_WHEN_IDLE=false
+
+# Wait time before switching (seconds)
+IDLE_TO_CLOCK_AFTER_SECONDS=30
+
+# Hold the last album art briefly to avoid flicker when Last.fm hiccups
+PLAYING_HOLD_SECONDS=180
+
+# Built-in clock appearance
+DEVICE_CLOCK_STYLE=3
+DEVICE_CLOCK_WITH_DATE=false
+DEVICE_CLOCK_24H=false
+DEVICE_CLOCK_COLOR=255,80,0
+
+# Keep device time accurate for the built-in clock
+SYNC_DEVICE_TIME_ON_START=true
+SYNC_DEVICE_TIME_ON_ENTER_CLOCK=true
